[FEATURE](/code): Implement task movement and deletion functionalities
	Now `TaskItem`s effectively move between `CategoryItem`s and can be deleted
	from them.

--- a/code/kanban/view/board.fxml
+++ b/code/kanban/view/board.fxml
@@ -16,11 +16,7 @@
 	</top>
 	
 	<center>
-		<HBox id = "mainPane">
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
-		</HBox>
+		<HBox fx:id = "categories" id = "mainPane"/>
 	</center>
 	
 	<bottom>
