--- a/code/kanban/view/category.fxml
+++ b/code/kanban/view/category.fxml
@@ -9,7 +9,7 @@
 <?import kanban.controller.TaskItem?>
 
 <fx:root id = "category" type = "javafx.scene.layout.VBox" xmlns:fx = "http://javafx.com/fxml">
-	<Label fx:id = "title" id = "title"/>
+	<Label fx:id = "name" id = "name"/>
 	
 	<Separator/>
 	
