[REFACTOR](/code): Make some changes to the `controller` package classes
	Make some name changes to make more clear what each class is intended to do

[FEATURE](/docs): Update UML diagrams to match the current state of the project

	The changes include the `controller` package classes name changes as well as
	their inheritance specification along with other minor fixes.

--- a/code/kanban/view/board.fxml
+++ b/code/kanban/view/board.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<?import kanban.controller.CategoryItem?>
+<?import kanban.controller.CategoryNode?>
 
 <fx:root id = "board" type = "javafx.scene.layout.BorderPane" xmlns:fx = "http://javafx.com/fxml">
 	<top>
@@ -17,9 +17,9 @@
 	
 	<center>
 		<HBox id = "mainPane">
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
-			<CategoryItem HBox.hgrow = "ALWAYS"/>
+			<CategoryNode HBox.hgrow = "ALWAYS"/>
+			<CategoryNode HBox.hgrow = "ALWAYS"/>
+			<CategoryNode HBox.hgrow = "ALWAYS"/>
 		</HBox>
 	</center>
 	
