[REFACTOR](/code/kanban/controller): Refactor related to event handling
[FEATURE](/docs): Update UML diagram to better reflect `controller` package API

--- a/code/kanban/view/task.fxml
+++ b/code/kanban/view/task.fxml
@@ -8,8 +8,8 @@
 	<contextMenu>
 		<ContextMenu>
 			<items>
-				<MenuItem fx:id = "modify" text = "modify"/>
-				<MenuItem fx:id = "remove" text = "remove"/>
+				<MenuItem fx:id = "modifyButton" text = "modify"/>
+				<MenuItem fx:id = "removeButton" text = "remove"/>
 			</items>
 		</ContextMenu>
 	</contextMenu>
