--- a/code/kanban/view/task.css
+++ b/code/kanban/view/task.css
@@ -3,7 +3,7 @@
 	-fx-font-size: 14;
 	
 	-fx-background-radius: 6;
-	-fx-background-color: #FEBF91; /* #89BAFF #81DDB6 #FEBF91 #BCB1F4 #EE9ECF #F8DC7E */
+	-fx-background-color: #000000;
 	
 	-fx-min-height: 45;
 	-fx-max-height: 45;
@@ -13,9 +13,4 @@
 	
 	-fx-alignment: center;
 	-fx-text-alignment: center;
-}
-
-#task:hover
-{
-	-fx-background-color: derive(#FEBF91, 20%);
 }
