[FEATURE](/code/kanban/controller): Integrate model into `CategoryNode` and `BoardNode`
[REFACTOR](/code/kanban/controller): Refactor `TaskNode` class

[REFACTOR](/code/kanban/model): Minor `Task` class refactoring

--- a/code/kanban/view/board.fxml
+++ b/code/kanban/view/board.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<?import kanban.controller.CategoryNode?>
-
 <fx:root id = "board" type = "javafx.scene.layout.BorderPane" xmlns:fx = "http://javafx.com/fxml">
 	<top>
 		<HBox id = "topPane">
@@ -16,11 +14,7 @@
 	</top>
 	
 	<center>
-		<HBox id = "mainPane">
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-		</HBox>
+		<HBox fx:id = "categoryContainer" id = "mainPane"/>
 	</center>
 	
 	<bottom>
