--- a/code/kanban/view/category.fxml
+++ b/code/kanban/view/category.fxml
@@ -6,24 +6,13 @@
 
 <?import javafx.scene.layout.VBox?>
 
-<?import kanban.controller.TaskNode?>
-
 <fx:root id = "category" type = "javafx.scene.layout.VBox" xmlns:fx = "http://javafx.com/fxml">
 	<Label fx:id = "name" id = "name"/>
 	
 	<Separator/>
 	
 	<ScrollPane VBox.vgrow = "ALWAYS">
-		<VBox fx:id = "tasks" id = "tasks">
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-			<TaskNode/>
-		</VBox>
+		<VBox fx:id = "taskContainer" id = "tasks"/>
 	</ScrollPane>
 	
 	<stylesheets>
