[REFACTOR/FEATURE](/code): Make some upgrades to the `controller` code
	Note: Some of this upgrades expand the API.

[REFACTOR/FEATURE](/docs): Update UML diagram to reflect changes

--- a/code/kanban/view/board.fxml
+++ b/code/kanban/view/board.fxml
@@ -16,11 +16,7 @@
 	</top>
 	
 	<center>
-		<HBox id = "mainPane">
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-			<CategoryNode HBox.hgrow = "ALWAYS"/>
-		</HBox>
+		<HBox fx:id = "categoryContainer" id = "mainPane"/>
 	</center>
 	
 	<bottom>
